---
source: crates/syntax/src/syntax.rs
expression: statements
---
- "[expect Semicolon but got Identifier"
- Nexpect Semicolon but got RBracket
- "];"
- "[expect Semicolon but got Identifier"
- Nexpect Semicolon but got Sub
- "-1expect Semicolon but got RBracket"
- "];"
- for(var i = 0; i < N-1; iexpect RParen but got UnitInc++)expect Semicolon but got LCurly
- "{\n                comp[i] = Multiplier2(expect Identifier but got RParen);\n            }"
- "comp[0].in1 <== in[0];"
- "comp[0].in2 <== in[1];"
- for(var i = 0; i < N-2; iexpect RParen but got UnitInc++)expect Semicolon but got LCurly
- "{\n                comp[i+1].in1 <== comp[i].out;\n                comp[i+1].in2 <== in[i+2];\n\n            }"
- "out <== comp[N-2].out;"
